--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background-color: rgb(134, 134, 255);
+    background-color: hsl(220, 15%, 55%);
 }
 
 .container{
@@ -13,16 +13,41 @@ body{
     display: flex;
     flex-direction: column;
     width: fit-content;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    border-radius: 10px;
+    align-items: center;
 }
 
 .qr_code{
+    border-radius: 10px;
     height: 200px;
     width: 200px;
-    background-color: red;
+    background: url('images/image-qr-code.png');
+    background-size: contain;
     margin: 10px;
 }
 
 .block_text{
-    height: 200px;
+    height: 150px;
     width: 200px;
+    display: flex;
+    flex-direction: column;
+}
+
+.texte1{
+    text-align: center;
+    font-size: 15px;
+    font-family: 'outfit';
+    font-weight: 700;
+}
+
+.texte2{
+    text-align: center;
+    color: hsl(220, 15%, 55%);
+    font-size: 13px;
+    font-family: 'outfit';
+    font-weight: 400;
 }
