--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background-color: hsl(220, 15%, 55%);
+    background-color: hsl(212, 45%, 89%);
 }
 
 .container{
@@ -17,29 +17,32 @@ body{
     top: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
-    border-radius: 10px;
+    border-radius: 13px;
     align-items: center;
+    box-shadow:   0px 8px 10px -10px hsl(220, 15%, 55%);
 }
 
 .qr_code{
-    border-radius: 10px;
-    height: 200px;
-    width: 200px;
+    border-radius: 13px;
+    height: 250px;
+    width: 250px;
     background: url('images/image-qr-code.png');
     background-size: contain;
     margin: 10px;
 }
 
 .block_text{
-    height: 150px;
+    height: 130px;
     width: 200px;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
 }
 
 .texte1{
     text-align: center;
-    font-size: 15px;
+    font-size: 16px;
     font-family: 'outfit';
     font-weight: 700;
 }
@@ -50,4 +53,5 @@ body{
     font-size: 13px;
     font-family: 'outfit';
     font-weight: 400;
+    width: 105%;
 }
